@startuml ViewClassesDiagram

'left to right direction
'skinparam groupInheritance 2
' skinparam nodesep 20
'skinparam ranksep 20

 together {
   class CardView
   class GalleryView
 }

 together {
   class FormView
   class HeaderView
 }

interface IComponent<T> {
  render(data?: Partial<T>): HTMLElement
}
abstract class Component<T> implements IComponent{
  # container: HTMLElement
  # setImage(element: HTMLImageElement, src: string, alt?: string): void
  + render(data?: Partial<T>): HTMLElement
}

'----Хедер-----'
class HeaderView {
  -cartButton: HTMLButtonElement
  -cartCounter: HTMLElement
  + set counter(value: number)
}


'---Каталог ---'

class GalleryView {
  -catalogueElement: HTMLElement
  + set catalogue(items: HTMLElement[])
}


'------Модалка---------'

class ModalView extends Component {
  -closeButton: HTMLButtonElement
  -contentContainer: HTMLElement
  + set content(HTMLElement)
  + set open(boolean): void
}

'-----Карточки------'
'---Базовый класс---'

abstract class CardView<T> extends Component {
  #titleElement: HTMLElement
  #priceElement: HTMLElement
  #mainActionElement: HTMLElement,

  + set title(string)
  + set price(string)
}

'-----Карточка для каталога---'

abstract class CardExtView<T> extends CardView {
  #categoryElement: HTMLElement
  #imageElement: HTMLImageElement

  + set category(string)
  + set image({ url, alt: string })
}

class CardCatalogueView extends CardExtView {
}

'-----Карточка для превью---'


class CardPreviewView extends CardExtView {
  -descriptionElement: HTMLElement
  -orderButton: HTMLButtonElement

  + set description(string)
  + set state(string)
}


'---Карточка для корзины----'
class CardCartView extends CardView {
  -indexElement: HTMLElement
  + set index(value: number)
}

'---Корзина ---'

class CartView extends Component {
  -productsList: HTMLUListElement
  -orderButton: HTMLButtonElement
  -priceElement: HTMLElement
  + set products(HTMLElement[])
  + set cartPrice(number)
  + set isCanOrder(boolean)
}


'---Формы----'

abstract class FormView<T> extends Component {
  #form: HTMLFormElement;
  #submitButton: HTMLButtonElement;
  #errorsElement: HTMLElement;
  +set isSubmitDisabled(boolean)
  +set errors(string);
}

class FormOrderView extends FormView {
    -paymentControls: HTMLButtonElement[];
    -addressInput: HTMLInputElement;
  + set payment(string);
  + set address(value: string);
}


class FormContactsView extends FormView {
    - phoneInput: HTMLInputElement;
    - emailInput: HTMLInputElement;
    + set phone(string)
    + set email(string)
}

'----Заказ успешен--'

class OrderSuccessView extends Component {
  -totalElement: HTMLElement
  + set total(string)
}

interface IEvents {
    on(EventName, (T) => void): void;
    emit(string, T): void;
    trigger(string, context?): (data: T) => void;
}


class CardFactory {
        - cardCart: TCardCartConstructor = CardCartView
        - cardCatalogue: TCardCatalogueConstructor = CardPreviewView
    + createCardCart(actions: TCardActions): IComponent<TCardCartView>; 
    +createCardCatalogue(actions: TCardActions): IComponent<TCardCatalogueView>; 

}

interface TCardCartConstructor  
interface TCardPreviewConstructor 
interface TCardCatalogueConstructor
interface ICardFactory

HeaderView --|> Component
GalleryView --|> Component

ModalView o.."1" IEvents
HeaderView o.."1" IEvents
FormView o.."1" IEvents
CartView o.."1" IEvents
OrderSuccessView o.."1" IEvents

CardFactory o.up."1" TCardCartConstructor
CardFactory o.up."1" TCardPreviewConstructor
CardFactory o.up."1" TCardCatalogueConstructor
CardFactory ..|>ICardFactory
CardCartView -- TCardCartConstructor
CardPreviewView -- TCardPreviewConstructor
CardCatalogueView -- TCardCatalogueConstructor

'hide <<interface>>
'hide class circle
'hide interface circle
@enduml